src/objects/Metadata_Title_Prefix__c.object
<CustomObject>
    <description>This object stores complete title for a given Country/Language/Title which is then used in a Conga template as a merge field.</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Title__c</fullName>
        <label>Full Title</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Norweign</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bà</fullName>
                </value>
                <value>
                    <fullName>Bapak</fullName>
                </value>
                <value>
                    <fullName>cien.</fullName>
                </value>
                <value>
                    <fullName>Cik</fullName>
                </value>
                <value>
                    <fullName>Cô</fullName>
                </value>
                <value>
                    <fullName>De heer</fullName>
                </value>
                <value>
                    <fullName>Docteur</fullName>
                </value>
                <value>
                    <fullName>Dott</fullName>
                </value>
                <value>
                    <fullName>Dott.ssa</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Estimada Sra.</fullName>
                </value>
                <value>
                    <fullName>Estimado Sr.</fullName>
                </value>
                <value>
                    <fullName>Exma. Senhora</fullName>
                </value>
                <value>
                    <fullName>Exma. Senhora Dra.</fullName>
                </value>
                <value>
                    <fullName>Familie</fullName>
                </value>
                <value>
                    <fullName>Firma</fullName>
                </value>
                <value>
                    <fullName>Frau</fullName>
                </value>
                <value>
                    <fullName>Frau Dr.</fullName>
                </value>
                <value>
                    <fullName>god.</fullName>
                </value>
                <value>
                    <fullName>Hei</fullName>
                </value>
                <value>
                    <fullName>Hej</fullName>
                </value>
                <value>
                    <fullName>Herr</fullName>
                </value>
                <value>
                    <fullName>Herr Dr.</fullName>
                </value>
                <value>
                    <fullName>Ibu</fullName>
                </value>
                <value>
                    <fullName>Kaere</fullName>
                </value>
                <value>
                    <fullName>Kepada</fullName>
                </value>
                <value>
                    <fullName>Kính gửi</fullName>
                </value>
                <value>
                    <fullName>Kunde</fullName>
                </value>
                <value>
                    <fullName>Kundin</fullName>
                </value>
                <value>
                    <fullName>Madame</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Title Prefix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>Prefix__c</columns>
        <columns>Full_Title__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Asia</fullName>
        <columns>Country__c</columns>
        <columns>Prefix__c</columns>
        <columns>Full_Title__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>China,Korea,Japan,Taiwan,Hong Kong</value>
        </filters>
        <label>Asia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Prefix__c</columns>
        <columns>Full_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>france</fullName>
        <columns>Country__c</columns>
        <columns>Prefix__c</columns>
        <columns>Full_Title__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>france</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MTP-{00000}</displayFormat>
        <label>Metadata Title Prefix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Title Prefix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>